<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainPostDetails">

    <TextView
        android:id="@+id/mpost_deats_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/post_details_username"/>

    <TextView
        android:id="@+id/mpost_deats_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mpost_deats_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/post_details_title"/>

    <TextView
        android:id="@+id/mpost_deats_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mpost_deats_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/post_details_tags"/>

    <Button
        android:id="@+id/mpost_deats_hyperlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mpost_deats_tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/post_details_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>