<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_constraint_layout"
    android:padding="15dp"
    app:layout_constraintHeight_min="600dp"
    app:layout_constraintWidth_min="300dp"
    tools:context=".PostCreationActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:text="@string/pc_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pc_title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pc_title_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pc_title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pc_tag_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pc_title_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pc_tag_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pc_tag"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pc_link_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pc_tag_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pc_link_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pc_link"
            android:inputType="textUri" /><!--TODO: not too sure about this, see what it does could always change to 'text'-->
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pc_link_layout"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>